--- a/login.html
+++ b/login.html
@@ -241,49 +241,60 @@ s0.parentNode.insertBefore(s1,s0);
 </script>
 <!--End of Tawk.to Script-->
 <script>
-  // Pretpostavljam da tvoja forma izgleda otprilike ovako (prilagoditi id-ove ako su drugačiji!)
   document.getElementById('login-form').addEventListener('submit', async function(e) {
     e.preventDefault();
 
-    const email    = document.getElementById('email').value.trim();
-    const lozinka  = document.getElementById('lozinka').value;
-    const poruka   = document.getElementById('poruka') || document.createElement('p');
+    const poruka = document.getElementById('poruka') || document.createElement('p');
+    poruka.textContent = 'Prijavljujem...';
+    poruka.style.color = 'blue';
 
-    if (!email || !lozinka) {
-      poruka.textContent = 'Unesi email i lozinku!';
+    const podaci = {
+      email: document.getElementById('email')?.value.trim() || '',
+      lozinka: document.getElementById('lozinka')?.value || ''
+    };
+
+    if (!podaci.email || !podaci.lozinka) {
+      poruka.textContent = 'Unesite email i lozinku!';
       poruka.style.color = 'red';
       return;
     }
 
-    poruka.textContent = 'Prijava u toku...';
-    poruka.style.color = 'black';
+    try {
+      const response = await fetch('https://lokalni-backend.onrender.com/login', {  // ← promeni ako ti ruta nije /login
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify(podaci)
+      });
 
-    const { data, error } = await supabase.auth.signInWithPassword({
-      email: email,
-      password: lozinka
-    });
+      const data = await response.json();
 
-    if (error) {
-      poruka.textContent = error.message;  // npr. "Invalid login credentials" ili "Email not confirmed"
-      poruka.style.color = 'red';
-      console.error(error);
-    } else {
+      if (!response.ok) {
+        throw new Error(data.error || 'Pogrešan email ili lozinka');
+      }
+
       poruka.style.color = 'green';
-      poruka.textContent = 'Uspešno prijavljen! Preusmeravam...';
+      poruka.textContent = data.message || 'Dobrodošao nazad!';
 
-      // Sačuvaj korisnika lokalno (opciono, za brzu proveru)
-      localStorage.setItem('userLoggedIn', 'true');
-      localStorage.setItem('userEmail', email);
+      // Sačuvaj token i user podatke
+      localStorage.setItem('authToken', data.token);
+      localStorage.setItem('user', JSON.stringify(data.user));
 
+      // Preusmeri na profil posle 1–2 sekunde
       setTimeout(() => {
-        window.location.href = 'moj-profil.html';  // ili gde god hoćeš da ide posle logina
+        window.location.href = 'moj-profil.html';
       }, 1500);
+
+    } catch (err) {
+      poruka.style.color = 'red';
+      poruka.textContent = err.message;
+      console.error(err);
     }
   });
 </script>
 </body>
 
 </html>
+
 
 
 
