--- a/registracija.html
+++ b/registracija.html
@@ -272,22 +272,41 @@
     <p style="margin-top:2rem; opacity:0.9;">© 2025 LokalniPlodovi • Sva prava zadržana</p>
   </div>
 </footer>
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/698e1ba8b9112b1c35ea4530/1jh9ho3bh';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
+<script>
 document.getElementById('registration-form').addEventListener('submit', async function(e) {
   e.preventDefault();
+  e.stopPropagation(); // dodatno sprečava default submit
 
-  const poruka = document.getElementById('poruka') || document.createElement('p');
-  poruka.textContent = 'Šaljem na server...';
-  poruka.style.color = 'blue';
+  const poruka = document.getElementById('poruka');
+  if (poruka) {
+    poruka.textContent = 'Šaljem na server...';
+    poruka.style.color = 'blue';
+  }
 
   const podaci = {
-    ime: document.getElementById('ime').value.trim(),
-    email: document.getElementById('email').value.trim(),
-    lozinka: document.getElementById('lozinka').value,
-    telefon: document.getElementById('telefon').value.trim(),
-    lokacija: document.getElementById('lokacija').value.trim(),
+    ime: document.getElementById('ime')?.value.trim() || '',
+    email: document.getElementById('email')?.value.trim() || '',
+    lozinka: document.getElementById('lozinka')?.value || '',
+    telefon: document.getElementById('telefon')?.value.trim() || '',
+    lokacija: document.getElementById('lokacija')?.value.trim() || '',
     nise: Array.from(document.querySelectorAll('input[name="nise"]:checked')).map(cb => cb.value),
-    opis: document.getElementById('opis').value.trim() || ''
+    opis: document.getElementById('opis')?.value.trim() || ''
   };
+
+  console.log('Podaci za slanje:', podaci); // vidi se u konzoli – proveri da li su OK
 
   try {
     const response = await fetch('https://lokalni-backend.onrender.com/register', {
@@ -297,29 +316,39 @@ document.getElementById('registration-form').addEventListener('submit', async fu
     });
 
     const data = await response.json();
+    console.log('Odgovor od servera:', data); // vidi u konzoli
 
     if (!response.ok) {
-      throw new Error(data.error || 'Greška na serveru');
+      throw new Error(data.error || 'Greška na serveru (status ' + response.status + ')');
     }
 
-    poruka.style.color = 'green';
-    poruka.textContent = data.message || 'Registracija uspešna!';
+    if (poruka) {
+      poruka.style.color = 'green';
+      poruka.textContent = data.message || 'Registracija uspešna!';
+    }
 
     localStorage.setItem('authToken', data.token);
     localStorage.setItem('user', JSON.stringify(data.user));
 
+    console.log('Token sačuvan:', data.token); // vidi u konzoli
+
     setTimeout(() => {
+      console.log('Preusmeravam na profil...');
       window.location.href = 'moj-profil.html';
     }, 1500);
 
   } catch (err) {
-    poruka.style.color = 'red';
-    poruka.textContent = err.message;
+    console.error('Greška:', err);
+    if (poruka) {
+      poruka.style.color = 'red';
+      poruka.textContent = err.message;
+    }
   }
 });
-
+</script>
 </body>
 </html>
+
 
 
 
