--- a/moj-profil.html
+++ b/moj-profil.html
@@ -163,8 +163,8 @@
 <div id="profil-podaci" style="display: none;">
   <p>Ime: <span id="user-ime">---</span></p>
   <p>Email: <span id="user-email">---</span></p>
-  <!-- Dodaj još ako želiš -->
-  <!-- <p>Telefon: <span id="user-telefon">---</span></p> -->
+  <p>Lokacija: <span id="user-lokacija">---</span></p>
+ <p>Telefon: <span id="user-telefon">---</span></p>
 </div>
 
 <footer>
@@ -205,6 +205,7 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+
 
 
 
