--- a/moj-profil.html
+++ b/moj-profil.html
@@ -3,216 +3,194 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Moj profil – LokalniPlodovi</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
- <meta http-equiv="Content-Security-Policy" content="
-  default-src 'self';
-  script-src 'self' https://www.gstatic.com https://cdnjs.cloudflare.com 'unsafe-inline' 'unsafe-eval';
-  style-src 'self' https://cdnjs.cloudflare.com 'unsafe-inline';
-  connect-src 'self' https://*.firebaseio.com https://*.googleapis.com;
-  img-src 'self' data:;
-">
+  <title>Moj profil - Lokalni Plodovi</title>
   <style>
-    :root {
-      --zelena: #2e7d32;
-      --zelena-svetla: #4caf50;
-      --zemlja: #5d4037;
-      --siva: #757575;
-      --svetlo: #f8f9f5;
-      --belo: #ffffff;
-    }
-
-    * { margin:0; padding:0; box-sizing:border-box; }
-
     body {
-      font-family: 'Segoe UI', system-ui, sans-serif;
-      background: var(--svetlo);
-      color: #333;
-      line-height: 1.6;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-    }
-
-    header {
-      background: rgba(46, 125, 50, 0.94);
-      color: white;
-      padding: 1rem 2rem;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-      width: 100%;
-    }
-
-    .logo { font-size: 1.8rem; font-weight: 700; }
-
-    nav {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      max-width: 1400px;
-      margin: 0 auto;
-    }
-
-    nav ul {
-      display: flex;
-      list-style: none;
-      gap: 2.5rem;
+      font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
+      background: #f8f8f8;
+      color: #333;
     }
-
+    header {
+      background: #4CAF50;
+      color: white;
+      padding: 15px;
+      text-align: center;
+    }
+    nav ul {
+      list-style: none;
+      padding: 0;
+      margin: 10px 0;
+    }
+    nav li {
+      display: inline;
+      margin: 0 15px;
+    }
     nav a {
       color: white;
       text-decoration: none;
-      font-weight: 500;
-      transition: 0.2s;
+      font-weight: bold;
     }
-
-    nav a:hover { color: #c8e6c9; }
-
-    .container {
-      max-width: 1400px;
-      margin: 2rem auto;
-      padding: 2rem 1.5rem;
+    nav a:hover {
+      text-decoration: underline;
     }
-
-    h1 {
-      color: var(--zemlja);
-      text-align: center;
-      margin: 2rem 0;
-    }
-
-    #profil-info {
+    main {
+      max-width: 800px;
+      margin: 30px auto;
+      padding: 20px;
       background: white;
-      padding: 2rem;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      max-width: 600px;
-      margin: 0 auto;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     }
-
-    #profil-info h2 {
-      color: var(--zelena);
-      margin-bottom: 1rem;
+    h1 {
+      color: #4CAF50;
+      text-align: center;
     }
-
-    #profil-info p {
-      margin: 0.8rem 0;
-      font-size: 1.1rem;
+    #loading-text {
+      text-align: center;
+      font-size: 1.2em;
+      color: #777;
+      margin: 40px 0;
     }
-
-    button {
-      background: var(--zelena);
+    .profil-info {
+      font-size: 1.1em;
+      line-height: 1.6;
+    }
+    .profil-info p {
+      margin: 10px 0;
+    }
+    .profil-info strong {
+      color: #4CAF50;
+    }
+    .nise-list {
+      margin-left: 20px;
+    }
+    #logout-btn {
+      display: block;
+      margin: 30px auto;
+      padding: 12px 30px;
+      background: #e74c3c;
       color: white;
       border: none;
-      padding: 1rem 2rem;
-      border-radius: 50px;
-      font-size: 1.1rem;
+      border-radius: 6px;
+      font-size: 1.1em;
       cursor: pointer;
-      margin-top: 2rem;
     }
-
-    button:hover {
-      background: var(--zelena-svetla);
+    #logout-btn:hover {
+      background: #c0392b;
     }
-
     footer {
-      background: var(--zemlja);
-      color: white;
       text-align: center;
-      padding: 4rem 1rem 2.5rem;
-      margin-top: auto;
+      padding: 20px;
+      background: #333;
+      color: white;
+      margin-top: 40px;
     }
   </style>
 </head>
 <body>
 
-<header>
-  <nav>
-    <div class="logo">LokalniPlodovi</div>
-    <ul>
-      <li><a href="index.html">Početna</a></li>
-      <li><a href="Prodavci.html">Svi prodavci</a></li>
-      <li><a href="mapa.html">Mapa</a></li>
-      <li><a href="chat.html">Chat</a></li>
+  <header>
+    <h2>Lokalni Plodovi</h2>
+    <nav>
+      <ul>
+        <li><a href="index.html">Početna</a></li>
+        <li><a href="prodavci.html">Svi prodavci</a></li>
+        <li><a href="mapa.html">Mapa</a></li>
+        <li><a href="chat.html">Chat</a></li>
+        <li><a href="prijavi-se.html">Prijavi se</a></li>
+        <li><a href="registracija.html">Postani prodavac</a></li>
+      </ul>
+    </nav>
+  </header>
 
-      <li id="moj-profil-li" style="display:none;">
-        <a href="/moj-profil">Moj profil</a>
-      </li>
-      <li id="odjavi-se-li" style="display:none;">
-        <a href="#" onclick="odjaviSe()">Odjavi se</a>
-      </li>
+  <main>
+    <h1>Moj profil</h1>
 
-      <li id="prijavi-se-li">
-        <a href="login.html">Prijavi se</a>
-      </li>
-      <li id="postani-prodavac-li">
-        <a href="registracija.html">Postani prodavac</a>
-      </li>
-    </ul>
-  </nav>
-</header>
+    <p id="loading-text">Učitavanje podataka...</p>
 
-<div class="container">
-  <h1>Moj profil</h1>
+    <div class="profil-info" id="profil-podaci" style="display: none;">
+      <p><strong>Ime:</strong> <span id="user-ime">---</span></p>
+      <p><strong>Email:</strong> <span id="user-email">---</span></p>
+      <p><strong>Telefon:</strong> <span id="user-telefon">---</span></p>
+      <p><strong>Lokacija:</strong> <span id="user-lokacija">---</span></p>
+      <p><strong>Opis:</strong> <span id="user-opis">---</span></p>
+      <p><strong>Niše / proizvodi:</strong></p>
+      <ul id="user-nise" class="nise-list"></ul>
+    </div>
 
-<p id="loading-text">Učitavanje podataka...</p>
+    <button id="logout-btn">Odjavi se</button>
+  </main>
 
-<div id="profil-podaci" style="display: none;">
-  <p>Ime: <span id="user-ime">---</span></p>
-  <p>Email: <span id="user-email">---</span></p>
-  <p>Lokacija: <span id="user-lokacija">---</span></p>
- <p>Telefon: <span id="user-telefon">---</span></p>
-</div>
+  <footer>
+    © 2025 LokalniPlodovi • Sva prava zadržana
+  </footer>
 
-<footer>
-  <div class="container">
-    <h2>LokalniPlodovi</h2>
-    <p>Prirodno • Sezonski • Direktno sa imanja Srbije</p>
-    <p style="margin-top:2rem; opacity:0.9;">© 2025 LokalniPlodovi • Sva prava zadržana</p>
-  </div>
-</footer>
-<script>
-document.addEventListener('DOMContentLoaded', () => {
-  console.log('Profil stranica učitana');
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      console.log('Profil stranica učitana');
 
-  const token = localStorage.getItem('authToken');
-  const userStr = localStorage.getItem('user');
+      const token = localStorage.getItem('authToken');
+      const userStr = localStorage.getItem('user');
 
-  const loading = document.getElementById('loading-text');
-  const podaciDiv = document.getElementById('profil-podaci');
+      const loading = document.getElementById('loading-text');
+      const podaciDiv = document.getElementById('profil-podaci');
 
-  if (loading) loading.textContent = 'Proveravam prijavu...';
+      if (loading) loading.textContent = 'Proveravam prijavu...';
 
-  if (!token || !userStr) {
-    console.log('Nema tokena ili user-a');
-    if (loading) loading.textContent = 'Niste prijavljeni. Preusmeravam na login...';
-    setTimeout(() => window.location.href = 'login.html', 2000);
-    return;
-  }
+      if (!token || !userStr) {
+        console.log('Nema tokena ili user podataka');
+        if (loading) loading.textContent = 'Niste prijavljeni. Preusmeravam na login...';
+        setTimeout(() => window.location.href = 'prijavi-se.html', 2000);
+        return;
+      }
 
-  const user = JSON.parse(userStr);
-  console.log('Korisnik pronađen:', user);
+      let user;
+      try {
+        user = JSON.parse(userStr);
+        console.log('Korisnik pronađen:', user);
+      } catch (err) {
+        console.error('Greška pri parsiranju user podataka:', err);
+        if (loading) loading.textContent = 'Greška pri učitavanju profila';
+        return;
+      }
 
-  if (loading) loading.textContent = ''; // briše loading
-  if (podaciDiv) podaciDiv.style.display = 'block'; // prikazuje podatke
+      if (loading) loading.textContent = '';
+      if (podaciDiv) podaciDiv.style.display = 'block';
 
-  document.getElementById('user-ime')?.textContent = user.ime || user.email.split('@')[0] || 'Korisnik';
-  document.getElementById('user-email')?.textContent = user.email || 'Nema emaila';
-});
-</script>
+      // Popunjavanje podataka
+      document.getElementById('user-ime')?.textContent = user.ime || user.email?.split('@')[0] || 'Korisnik';
+      document.getElementById('user-email')?.textContent = user.email || 'Nema emaila';
+      document.getElementById('user-telefon')?.textContent = user.telefon || '---';
+      document.getElementById('user-lokacija')?.textContent = user.lokacija || '---';
+      document.getElementById('user-opis')?.textContent = user.opis || 'Nema opisa';
+
+      // Prikaz nise (ako postoje)
+      const niseList = document.getElementById('user-nise');
+      if (niseList && user.nise) {
+        let niseArray;
+        try {
+          niseArray = JSON.parse(user.nise);
+        } catch {
+          niseArray = [];
+        }
+        niseArray.forEach(n => {
+          const li = document.createElement('li');
+          li.textContent = n;
+          niseList.appendChild(li);
+        });
+      }
+
+      // Logout dugme
+      document.getElementById('logout-btn')?.addEventListener('click', () => {
+        localStorage.removeItem('authToken');
+        localStorage.removeItem('user');
+        window.location.href = 'prijavi-se.html';
+      });
+    });
+  </script>
+
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
+  
