--- a/moj-profil.html
+++ b/moj-profil.html
@@ -99,7 +99,7 @@
         <li><a href="prodavci.html">Svi prodavci</a></li>
         <li><a href="mapa.html">Mapa</a></li>
         <li><a href="chat.html">Chat</a></li>
-        <li><a href="prijavi-se.html">Prijavi se</a></li>
+        <li><a href="login.html">Prijavi se</a></li>
         <li><a href="registracija.html">Postani prodavac</a></li>
       </ul>
     </nav>
@@ -194,3 +194,4 @@
 </body>
 </html>
   
+
