--- a/login.html
+++ b/login.html
@@ -3,296 +3,116 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Prijavi se – LokalniPlodovi</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+  <title>Prijava - Lokalni Plodovi</title>
   <style>
-    :root {
-      --zelena: #2e7d32;
-      --zelena-svetla: #4caf50;
-      --zemlja: #5d4037;
-      --siva: #757575;
-      --svetlo: #f8f9f5;
-      --belo: #ffffff;
-    }
-
-    * { margin:0; padding:0; box-sizing:border-box; }
-
-    body {
-      font-family: 'Segoe UI', system-ui, sans-serif;
-      background: var(--svetlo);
-      color: #333;
-      line-height: 1.6;
-      min-height: 100vh;
-    }
-
-    header {
-      background: rgba(46, 125, 50, 0.94);
-      color: white;
-      padding: 1rem 2rem;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-      width: 100%;
-    }
-
-    .logo { font-size: 1.8rem; font-weight: 700; }
-
-    nav {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      max-width: 1400px;
-      margin: 0 auto;
-    }
-
-    nav ul {
-      display: flex;
-      list-style: none;
-      gap: 2.5rem;
-      margin: 0;
-      padding: 0;
-    }
-
-    nav a {
-      color: white;
-      text-decoration: none;
-      font-weight: 500;
-      transition: 0.2s;
-    }
-
-    nav a:hover { color: #c8e6c9; }
-
-    .container {
-      max-width: 600px;
-      margin: 4rem auto;
-      padding: 0 1.5rem;
-    }
-
-    h1 {
-      color: var(--zemlja);
-      text-align: center;
-      margin-bottom: 2rem;
-    }
-
-    form {
-      background: white;
-      padding: 2.5rem;
-      border-radius: 16px;
-      box-shadow: 0 6px 20px rgba(0,0,0,0.08);
-    }
-
-    .form-group {
-      margin-bottom: 1.5rem;
-    }
-
-    label {
-      display: block;
-      margin-bottom: 0.5rem;
-      font-weight: 500;
-      color: var(--zemlja);
-    }
-
-    input[type="email"],
-    input[type="password"] {
-      width: 100%;
-      padding: 0.9rem;
-      border: 1px solid #ddd;
-      border-radius: 8px;
-      font-size: 1rem;
-    }
-
-    .submit-btn {
-      background: var(--zelena-svetla);
-      color: white;
-      padding: 1rem;
-      border: none;
-      border-radius: 50px;
-      font-size: 1.1rem;
-      font-weight: 600;
-      cursor: pointer;
-      transition: 0.2s;
-      width: 100%;
-      margin-top: 1rem;
-    }
-
-    .submit-btn:hover {
-      background: var(--zelena);
-    }
-
-    .register-link {
-      text-align: center;
-      margin-top: 1.5rem;
-    }
-
-    .register-link a {
-      color: var(--zelena);
-      text-decoration: none;
-      font-weight: 500;
-    }
-
-    .register-link a:hover {
-      text-decoration: underline;
-    }
-
-    footer {
-      background: var(--zemlja);
-      color: white;
-      text-align: center;
-      padding: 4rem 1rem 2.5rem;
-      margin-top: 6rem;
-    }
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f8f8f8; color: #333; }
+    header { background: #4CAF50; color: white; padding: 15px; text-align: center; }
+    nav ul { list-style: none; padding: 0; margin: 10px 0; }
+    nav li { display: inline; margin: 0 15px; }
+    nav a { color: white; text-decoration: none; font-weight: bold; }
+    nav a:hover { text-decoration: underline; }
+    main { max-width: 500px; margin: 50px auto; padding: 30px; background: white; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
+    h1 { color: #4CAF50; text-align: center; }
+    .form-group { margin-bottom: 20px; }
+    label { display: block; margin-bottom: 6px; font-weight: bold; }
+    input { width: 100%; padding: 10px; border: 1px solid #ccc; border-radius: 4px; box-sizing: border-box; }
+    button { width: 100%; padding: 12px; background: #4CAF50; color: white; border: none; border-radius: 6px; font-size: 1.1em; cursor: pointer; }
+    button:hover { background: #45a049; }
+    #poruka { margin-top: 15px; text-align: center; min-height: 20px; }
+    footer { text-align: center; padding: 20px; background: #333; color: white; margin-top: 50px; }
   </style>
 </head>
 <body>
 
-<header>
-  <nav>
-    <div class="logo">LokalniPlodovi</div>
-    <ul>
-      <li><a href="index.html">Početna</a></li>
-      <li><a href="Prodavci.html">Svi prodavci</a></li>
-      <li><a href="mapa.html">Mapa</a></li>
-      <li><a href="chat.html">Chat</a></li>
+  <header>
+    <h2>Lokalni Plodovi</h2>
+    <nav>
+      <ul>
+        <li><a href="index.html">Početna</a></li>
+        <li><a href="prodavci.html">Svi prodavci</a></li>
+        <li><a href="mapa.html">Mapa</a></li>
+        <li><a href="chat.html">Chat</a></li>
+        <li><a href="prijavi-se.html">Prijavi se</a></li>
+        <li><a href="registracija.html">Postani prodavac</a></li>
+      </ul>
+    </nav>
+  </header>
 
-      <!-- Prikazuje se SAMO ako je ulogovan -->
-      <li id="moj-profil-li" style="display:none;">
-        <a href="moj-profil.html">Moj profil</a>
-      </li>
-      <li id="odjavi-se-li" style="display:none;">
-        <a href="#" onclick="odjaviSe()">Odjavi se</a>
-      </li>
+  <main>
+    <h1>Prijava</h1>
 
-      <!-- Prikazuje se SAMO ako NIJE ulogovan -->
-      <li id="prijavi-se-li">
-        <a href="login.html">Prijavi se</a>
-      </li>
-      <li id="postani-prodavac-li">
-        <a href="registracija.html">Postani prodavac</a>
-      </li>
-    </ul>
-  </nav>
-</header>
+    <form id="login-form">
+      <div class="form-group">
+        <label for="email">Email *</label>
+        <input type="email" id="email" required />
+      </div>
 
-<script>
-  // Proveri da li je korisnik ulogovan
-  const korisnik = localStorage.getItem('trenutniKorisnik');
+      <div class="form-group">
+        <label for="lozinka">Lozinka *</label>
+        <input type="password" id="lozinka" required minlength="6" />
+      </div>
 
-  if (korisnik) {
-    document.getElementById('moj-profil-li').style.display = 'list-item';
-    document.getElementById('odjavi-se-li').style.display = 'list-item';
-    document.getElementById('prijavi-se-li').style.display = 'none';
-    document.getElementById('postani-prodavac-li').style.display = 'none';
-  } else {
-    document.getElementById('moj-profil-li').style.display = 'none';
-    document.getElementById('odjavi-se-li').style.display = 'none';
-    document.getElementById('prijavi-se-li').style.display = 'list-item';
-    document.getElementById('postani-prodavac-li').style.display = 'list-item';
-  }
+      <button type="submit">Prijavi se</button>
+    </form>
 
-  function odjaviSe() {
-    localStorage.removeItem('trenutniKorisnik');
-    window.location.href = 'index.html';
-  }
-</script>
+    <p id="poruka"></p>
+  </main>
 
-<div class="container">
+  <footer>
+    © 2025 LokalniPlodovi • Sva prava zadržana
+  </footer>
 
-  <h1>Prijavi se</h1>
+  <script>
+    document.getElementById('login-form').addEventListener('submit', async function(e) {
+      e.preventDefault();
 
-  <form>
-    <div class="form-group">
-      <label for="email">Email</label>
-      <input type="email" id="email" required placeholder="vas@email.com">
-    </div>
+      const poruka = document.getElementById('poruka');
+      poruka.textContent = 'Prijavljujem...';
+      poruka.style.color = 'blue';
 
-    <div class="form-group">
-      <label for="password">Lozinka</label>
-      <input type="password" id="password" required placeholder="••••••••">
-    </div>
+      const podaci = {
+        email: document.getElementById('email').value.trim(),
+        lozinka: document.getElementById('lozinka').value
+      };
 
-    <button type="submit" class="submit-btn">Prijavi se</button>
-  </form>
-
-  <div class="register-link">
-    Nemaš nalog?<a href="registracija.html" class="btn-login"><i class="fas fa-sign-in-alt"></i> postani prodavac</a>
-  </div>
-
-</div>
-
-<footer>
-  <div class="container">
-    <h2>LokalniPlodovi</h2>
-    <p>Prirodno • Sezonski • Direktno sa imanja Srbije</p>
-    <p style="margin-top:2rem; opacity:0.9;">© 2025 LokalniPlodovi • Sva prava zadržana</p>
-  </div>
-</footer>
-<!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/698e1ba8b9112b1c35ea4530/1jh9ho3bh';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script-->
-<script>
-  document.getElementById('login-form').addEventListener('submit', async function(e) {
-    e.preventDefault();
-
-    const poruka = document.getElementById('poruka') || document.createElement('p');
-    poruka.textContent = 'Prijavljujem...';
-    poruka.style.color = 'blue';
-
-    const podaci = {
-      email: document.getElementById('email')?.value.trim() || '',
-      lozinka: document.getElementById('lozinka')?.value || ''
-    };
-
-    if (!podaci.email || !podaci.lozinka) {
-      poruka.textContent = 'Unesite email i lozinku!';
-      poruka.style.color = 'red';
-      return;
-    }
-
-    try {
-      const response = await fetch('https://lokalni-backend.onrender.com/login', {  // ← promeni ako ti ruta nije /login
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify(podaci)
-      });
-
-      const data = await response.json();
-
-      if (!response.ok) {
-        throw new Error(data.error || 'Pogrešan email ili lozinka');
+      if (!podaci.email || !podaci.lozinka) {
+        poruka.textContent = 'Unesite email i lozinku!';
+        poruka.style.color = 'red';
+        return;
       }
 
-      poruka.style.color = 'green';
-      poruka.textContent = data.message || 'Dobrodošao nazad!';
+      try {
+        const response = await fetch('https://lokalni-backend.onrender.com/login', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify(podaci)
+        });
 
-      // Sačuvaj token i user podatke
-      localStorage.setItem('authToken', data.token);
-      localStorage.setItem('user', JSON.stringify(data.user));
+        const data = await response.json();
 
-      // Preusmeri na profil posle 1–2 sekunde
-      setTimeout(() => {
-        window.location.href = 'moj-profil.html';
-      }, 1500);
+        if (!response.ok) {
+          throw new Error(data.error || 'Pogrešan email ili lozinka');
+        }
 
-    } catch (err) {
-      poruka.style.color = 'red';
-      poruka.textContent = err.message;
-      console.error(err);
-    }
-  });
-</script>
+        poruka.style.color = 'green';
+        poruka.textContent = data.message || 'Dobrodošao nazad!';
+
+        localStorage.setItem('authToken', data.token);
+        localStorage.setItem('user', JSON.stringify(data.user));
+
+        setTimeout(() => {
+          window.location.href = 'moj-profil.html';
+        }, 1500);
+
+      } catch (err) {
+        poruka.style.color = 'red';
+        poruka.textContent = err.message;
+        console.error('Greška pri prijavi:', err);
+      }
+    });
+  </script>
+
 </body>
-
 </html>
 
 
