--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
         <li><a href="prodavci.html">Svi prodavci</a></li>
         <li><a href="mapa.html">Mapa</a></li>
         <li><a href="chat.html">Chat</a></li>
-        <li><a href="prijavi-se.html">Prijavi se</a></li>
+        <li><a href="login.html">Prijavi se</a></li>
         <li><a href="registracija.html">Postani prodavac</a></li>
       </ul>
     </nav>
@@ -114,6 +114,7 @@
 
 </body>
 </html>
+
 
 
 
